<resources>
    <string name="app_name">Datenbank</string>
    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <string name="editText_hint_quantity">Anzahl</string>
    <string name="editText_hint_product">Produkt</string>
    <string name="button_add_product">+</string>

    <string name="editText_errorMessage">Das Feld darf nicht leer sein.</string>

    <string name="cab_delete">Einträge löschen</string>


    <string name="cab_change">Eintrag ändern</string>
    <string name="cab_checked_string">ausgewählt</string>

    <string name="dialog_title">Listeneintrag ändern</string>
    <string name="dialog_title_quantity">Anzahl:</string>
    <string name="dialog_title_product">Produkt:</string>
    <string name="dialog_button_positive">Ändern</string>
    <string name="dialog_button_negative">Abbrechen</string>
    <string name="dialog_shoppinglist">Name: </string>
    <string name="dialog_shoppinglist_button_text">Bild Einfügen</string>
    <string name="add_new_shoppinglist">add</string>
    <string name="dialog_addshoppinglist">hinfügen</string>
    <string name="dialog_cancelshoppinglist">löschen</string>



</resources>
