<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/shoppingimage"
        android:layout_width="400dp"
        android:layout_height="220dp"
        android:layout_alignParentTop="true" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:id="@+id/relativeLayout"
        android:layout_above="@+id/listview_shopping_memos"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">



        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/editText_hint_quantity"
            android:inputType="number"
            android:id="@+id/editText_quantity"
            android:layout_weight="1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/editText_hint_product"
            android:id="@+id/editText_product"
            android:layout_weight="4"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/editText_quantity"
            android:layout_toEndOf="@+id/editText_quantity" />

        <Button
            android:id="@+id/pick_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/button_add_product"
            android:layout_toStartOf="@+id/button_add_product"
            android:icon="@android:drawable/ic_menu_edit"
            android:onClick="onClickpickimage"
            android:text="Bild hinfügen"
            android:textSize="9sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add_product"
            android:id="@+id/button_add_product"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <ListView
        android:id="@+id/listview_shopping_memos"
        android:layout_width="match_parent"
        android:layout_height="251dp"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>